--- a/Chris.html
+++ b/Chris.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Christopher Nolan</title>
+    <link rel="stylesheet" href="css/styles.css"> 
   </head>
   <body>
     <a href="https://en.wikipedia.org/wiki/Christopher_Nolan" target="_blank"><img src="chris.jpg" alt="Christopher Nolan" height="380"></a>
@@ -12,7 +13,7 @@
     <table border>
       <thead>
         <tr>
-          <th>Movie</th>
+          <th>Mavie</th>
           <th>Rate</th>
           <th>Year</th>
         </tr>
