--- a/index.html
+++ b/index.html
@@ -1,40 +1,25 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
+
     <meta charset="utf-8">
     <title>Mavies</title>
+    <link rel="stylesheet" href="css/styles.css">
+
+
   </head>
+
   <body>
-  <h1>Mavies</h1>
-  <p>Welcome to the <em>best</em> movies website ever</p>
-  <hr>
-  <h3>Directors</h3>
-  <ul>
+
+   <h1>Mavies</h1>
+   <p>Welcome to the <em>best</em> movies website ever</p>
+   <hr>
+   <h3>Directors</h3>
+   <ul>
     <li><a href="Chris.html" target="_blank">Christopher Nolan</a></li>
-  </ul>
-
-  <form action="mailto:ibraheemhunaity5@gmail.com" method="post" enctype="text/plain">
-    <label>Your Name:</label>
-    <input type="text" name="name">
-    <br>
-    <label>Your Email:</label>
-    <input type="email" name="email">
-    <br>
-    <label >Your Message:</label>
-    <textarea name="Your Message:" rows="8" cols="80"></textarea>
-    <br>
-    <input type="submit">
-
-  </form>
-
-
-
-
-
-
-
-
-
+    <li><a href="https://en.wikipedia.org/wiki/Martin_Scorsese" target="_blank">Martin Scorsese</a></li>
+    <li><a href="https://en.wikipedia.org/wiki/Quentin_Tarantino" target="_blank">Quentin Tarantino</a></li>
+   </ul>
 
   </body>
 </html>
